# goalwise-backend

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
accountability_score/: admin.py  apps.py  models.py  serializer.py  settings.py  tasks.py  tests.py  urls.py  utils.py  views.py
accountability_score/migrations/: 0001_initial.py  0002_alter_accountabilityscore_id_alter_dailyscorelog_id_and_more.py  0002_usermetrics.py  0003_alter_usermetrics_user_and_more.py  0004_alter_accountabilityscore_table.py  0005_alter_accountabilityscore_id_alter_dailyscorelog_id_and_more.py  0006_alter_usermetrics_consistency_and_more.py  0007_accountabilityscore_prev_score.py  0008_alter_dailyscorelog_date.py
goalwise/: asgi.py  celery.py  models.py  settings.py  urls.py  wsgi.py
tasks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_tag_id_alter_task_id_alter_taskstatus_id.py  0002_remove_task_due_date.py  0003_alter_task_id.py  0003_auto_20240122_0445.py  0004_tag_created_at_tag_updated_at_alter_tag_id.py  0005_task_duration_task_start_time_task_time_of_day.py  0006_remove_task_time_of_day.py  0007_taskcompletion.py  0008_alter_task_status.py  0009_remove_task_description.py  0010_alter_task_days_of_week.py  0011_alter_task_days_of_week.py  0012_day_remove_task_days_of_week_task_days_of_week.py  0013_taskstatus_remove_task_status_delete_taskcompletion_and_more.py  (+1 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+1 files in other folders)
